protect routes and manage redirection

--- a/.env-sample
+++ b/.env-sample
@@ -1,2 +1,3 @@
 DB_CONFIG={"name": "django","user":"root","password": "root.", "host": "localhost", "port": "3306"}
 DEBUG=True
+ALLOWED_HOSTS=*,google.com,123213
