azure blob config added and Email Configured

--- a/.env-sample
+++ b/.env-sample
@@ -1,3 +1,12 @@
 DB_CONFIG={"name": "django","user":"root","password": "root.", "host": "localhost", "port": "3306"}
 DEBUG=True
 ALLOWED_HOSTS=*,google.com,123213
+AZURE_SA_NAME=
+AZURE_SA_KEY=
+EMAIL_HOST=''
+EMAIL_PORT=
+EMAIL_HOST_USER=''
+EMAIL_HOST_PASSWORD=''
+DEFAULT_FROM_EMAIL=''
+EMAIL_USE_TLS=
+EMAIL_RECEPIENT=''
